# rust-with-literal

./: Cargo.toml  README.md
src/: lib.rs
